...
            imeAction = ImeAction.Next
        ),
        isError = isError,
        singleLine = true,
        modifier = Modifier
            .fillMaxWidth()
            .testTag("TEST_EXPERIENCE_TEXTFIELD")
    )

    Spacer(Modifier.height(8.dp))

    OutlinedTextField(
        value = reasonInput,
...
                addExperience()
            }
        ),
        singleLine = true,
        modifier = Modifier
            .fillMaxWidth()
            .testTag("TEST_REASON_TEXTFIELD")
    )

    Spacer(Modifier.height(8.dp))

    Button(
        onClick = {
...
